# Movie-DB-to-Obsidian

./: .gitignore  Readme.md  constants.py  functions.py  main.py  pyproject.toml
Components/: Search.py  display_movie_details.py
Models/: Movie.py
