[project]
name = "moviedbtoobsidian"
version = "0.1.0"
description = ""
authors = [
    {name = "Krestin Franzsen PC",email = "blaze.franzsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlmodel (>=0.0.27,<0.0.28)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
